--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,16 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ext-http": "*",
+        "doctrine/dbal": "^3.7",
+        "filament/filament": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "livewire/livewire": "^2.11",
         "laravel/ui": "^4.0",
-        "filament/filament": "^2.0",
-        "spatie/laravel-sluggable": "^3.4",
-      "ext-http": "*"
+        "livewire/livewire": "^2.11",
+        "spatie/laravel-sluggable": "^3.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
