--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.0",
         "livewire/livewire": "^2.11",
-        "spatie/laravel-sluggable": "^3.4"
+        "spatie/laravel-sluggable": "^3.4",
+        "rap2hpoutre/fast-excel": "^5.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
