--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel
-DB_USERNAME=root
+DB_USERNAME=
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
@@ -31,10 +31,10 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=mail.infomaniak.com
 MAIL_PORT=587
-MAIL_USERNAME=contact@gquiose.africa
-MAIL_PASSWORD=Conakry2020@
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS="contact@gquiose.africa"
+MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -57,3 +57,15 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+# API Système National VBG
+VBG_NATIONAL_ENABLED=false
+VBG_NATIONAL_API_URL=
+VBG_NATIONAL_API_KEY=
+
+# SMS Provider (twilio, vonage, aws_sns, local)
+SMS_PROVIDER=twilio
+TWILIO_SID=
+TWILIO_TOKEN=
+TWILIO_FROM=
