feat: Add push notification support for FCM and APNs, create event classes, and update user model
- Updated .env.example to include FCM and APNs configuration.
- Added .gitignore entry for APNs private key files.
- Created event classes: AlertCreated, EvaluationCompleted, MessageReplied, NewArticlePublished for broadcasting notifications.
- Enhanced CreatePushNotification page to set default status to 'pending'.
- Updated NotificationStatsWidget to include PushNotification model.
- Modified Utilisateur model to include fcm_token, platform, and ville relationship.
- Implemented platform-based routing for push notifications in PushNotificationService.
- Added edamov/pushok package for APNs support in composer.json and composer.lock.
- Created create-test-users.php script to generate test users with simulated FCM tokens.

--- a/.env.example
+++ b/.env.example
@@ -69,3 +69,12 @@ SMS_PROVIDER=twilio
 TWILIO_SID=
 TWILIO_TOKEN=
 TWILIO_FROM=
+
+# Push Notifications - FCM (Android)
+FCM_SERVER_KEY=
+
+# Push Notifications - APNs (iOS)
+APNS_KEY_ID=
+APNS_TEAM_ID=
+APNS_BUNDLE_ID=com.gquiose.app
+APNS_ENVIRONMENT=production
