--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^8.1",
         "ext-http": "*",
         "doctrine/dbal": "^3.7",
+        "edamov/pushok": "^0.18.1",
         "filament/filament": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
@@ -18,8 +19,8 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.0",
         "livewire/livewire": "^2.11",
-        "spatie/laravel-sluggable": "^3.4",
-        "rap2hpoutre/fast-excel": "^5.3"
+        "rap2hpoutre/fast-excel": "^5.3",
+        "spatie/laravel-sluggable": "^3.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
