feat: Implement user mention notifications and reply notifications in forum
- Added UserMentioned event and SendMentionNotification listener to handle user mentions in messages and chats.
- Integrated mention detection in syncMessage and syncChat methods of APIForumController.
- Created SendReplyNotification listener to notify users when they receive replies to their messages.
- Updated EventServiceProvider to register new events and listeners.
- Introduced MentionDetector service for extracting mentions from text.
- Added SMS service classes (TwilioSMS, VonageSMS) and SMSInterface for sending SMS notifications.
- Implemented SocialVerifier service for verifying social authentication tokens (Google, Facebook, Apple).
- Updated authentication to use Sanctum and configured social authentication services.
- Added phone_verified_at column to utilisateurs table for tracking phone verification status.
- Refactored API routes to organize password reset and protected routes under authentication middleware.

--- a/.env.example
+++ b/.env.example
@@ -78,3 +78,17 @@ APNS_KEY_ID=
 APNS_TEAM_ID=
 APNS_BUNDLE_ID=com.gquiose.app
 APNS_ENVIRONMENT=production
+
+
+# Google OAuth
+GOOGLE_CLIENT_ID=your_client_id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your_secret
+
+# Facebook OAuth
+FACEBOOK_APP_ID=your_app_id
+FACEBOOK_APP_SECRET=your_secret
+
+# Apple OAuth
+APPLE_BUNDLE_ID=com.yourapp
+APPLE_TEAM_ID=your_team_id
+APPLE_KEY_ID=your_key_id
