feat: Add notification scheduling and tracking features
- Introduced `notification_schedules` table for managing scheduled notifications with fields for content, scheduling, segmentation, and status.
- Added `notification_logs` table to track the status and history of sent notifications.
- Updated `services.php` to include new FCM credentials and APNs environment configuration.
- Created seeders for essential data: Super Admin, test users, and cities in Guinea.
- Implemented API routes for notification tracking (opened, clicked, history).

--- a/.env.example
+++ b/.env.example
@@ -71,13 +71,15 @@ TWILIO_TOKEN=
 TWILIO_FROM=
 
 # Push Notifications - FCM (Android)
-FCM_SERVER_KEY=
+FCM_SERVER_KEY= # Deprecated - use credentials file instead
+FCM_CREDENTIALS_PATH= # Path to Firebase Admin SDK credentials JSON file (e.g., storage/app/firebase/credentials.json)
 
 # Push Notifications - APNs (iOS)
-APNS_KEY_ID=
-APNS_TEAM_ID=
-APNS_BUNDLE_ID=com.gquiose.app
-APNS_ENVIRONMENT=production
+APNS_KEY_ID= # Key ID from Apple Developer Portal
+APNS_TEAM_ID= # Team ID from Apple Developer Portal
+APNS_BUNDLE_ID=com.gquiose.app # Your app's bundle identifier
+APNS_KEY_PATH= # Path to AuthKey.p8 file (e.g., storage/app/apns/AuthKey.p8)
+APNS_ENVIRONMENT=production # 'production' for App Store, 'sandbox' for TestFlight
 
 
 # Google OAuth
