--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.1",
         "ext-http": "*",
+        "barryvdh/laravel-dompdf": "^3.1",
         "doctrine/dbal": "^3.7",
         "edamov/pushok": "^0.18.1",
         "filament/filament": "^2.0",
@@ -20,6 +21,7 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.0",
         "livewire/livewire": "^2.11",
+        "maatwebsite/excel": "^3.1",
         "rap2hpoutre/fast-excel": "^5.3",
         "spatie/laravel-sluggable": "^3.4"
     },
