Add NimbaSMS provider integration and update SMS configuration

--- a/.env.example
+++ b/.env.example
@@ -64,8 +64,16 @@ VBG_NATIONAL_ENABLED=false
 VBG_NATIONAL_API_URL=
 VBG_NATIONAL_API_KEY=
 
-# SMS Provider (twilio, vonage, aws_sns, local)
-SMS_PROVIDER=twilio
+# SMS Provider (nimba, twilio, vonage)
+SMS_PROVIDER=nimba
+
+# NimbaSMS Configuration (https://developers.nimbasms.com/)
+NIMBA_SMS_BASE_URL=https://api.nimbasms.com
+NIMBA_SMS_SERVICE_ID=
+NIMBA_SMS_SECRET=
+NIMBA_SMS_SENDER_NAME=GQUIOSE
+
+# Twilio Configuration (alternative)
 TWILIO_SID=
 TWILIO_TOKEN=
 TWILIO_FROM=
