Update Google OAuth configuration to support multiple client IDs for web, Android, and iOS

--- a/.env.example
+++ b/.env.example
@@ -90,9 +90,11 @@ APNS_KEY_PATH= # Path to AuthKey.p8 file (e.g., storage/app/apns/AuthKey.p8)
 APNS_ENVIRONMENT=production # 'production' for App Store, 'sandbox' for TestFlight
 
 
-# Google OAuth
-GOOGLE_CLIENT_ID=your_client_id.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=your_secret
+# Google OAuth (from Google Cloud Console > APIs & Services > Credentials)
+# Only client IDs are needed for mobile token verification (no secret required)
+GOOGLE_CLIENT_ID=your-project-id-xxxxx.apps.googleusercontent.com
+GOOGLE_CLIENT_ID_ANDROID=your-project-id-xxxxx.apps.googleusercontent.com
+GOOGLE_CLIENT_ID_IOS=your-project-id-xxxxx.apps.googleusercontent.com
 
 # Facebook OAuth
 FACEBOOK_APP_ID=your_app_id
