--- a/.env.example
+++ b/.env.example
@@ -59,6 +59,9 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 
+# YouTube API (pour récupérer durée des vidéos)
+# Obtenir une clé sur: https://console.cloud.google.com/apis/credentials
+YOUTUBE_API_KEY=récupérer_durée_des_vidéos
 
 # SMS Provider (nimba, twilio, vonage)
 SMS_PROVIDER=nimba
