feat: Integrate OneSignal for push notifications and update user model to support OneSignal player ID

--- a/.env.example
+++ b/.env.example
@@ -77,16 +77,9 @@ TWILIO_SID=
 TWILIO_TOKEN=
 TWILIO_FROM=
 
-# Push Notifications - FCM (Android)
-FCM_SERVER_KEY= # Deprecated - use credentials file instead
-FCM_CREDENTIALS_PATH= # Path to Firebase Admin SDK credentials JSON file (e.g., storage/app/firebase/credentials.json)
-
-# Push Notifications - APNs (iOS)
-APNS_KEY_ID= # Key ID from Apple Developer Portal
-APNS_TEAM_ID= # Team ID from Apple Developer Portal
-APNS_BUNDLE_ID=com.gquiose.app # Your app's bundle identifier
-APNS_KEY_PATH= # Path to AuthKey.p8 file (e.g., storage/app/apns/AuthKey.p8)
-APNS_ENVIRONMENT=production # 'production' for App Store, 'sandbox' for TestFlight
+# Push Notifications - OneSignal
+ONESIGNAL_APP_ID= # Your OneSignal App ID (from Settings > Keys & IDs)
+ONESIGNAL_REST_API_KEY= # Your OneSignal REST API Key (from Settings > Keys & IDs)
 
 
 # Google OAuth (from Google Cloud Console > APIs & Services > Credentials)
